<resources>
    <string name="app_name">APPersonal Trainer</string>
    <string name="treino">Treino</string>
    <string name="banner_ad_unit_id2">ca-app-pub-4960619699535760/2087771137</string>
    <string name="banner_ad_unit_id">ca-app-pub-4960619699535760/2759839538</string>
    <string name="banner_ad_unit_id3">ca-app-pub-4960619699535760/4978018539</string>
    <string name="facebook_app_id">315516028874581</string>
    <string name="fb_login_protocol_scheme">fb315516028874581</string>
    <string name="treinarText">Treinar!</string>
    <string name="editar_treinos_text">Editar Treinos</string>
    <string name="hist_rico_de_treinos_btn">Histórico de Treinos</string>
    <string name="hist_rico_de_corridas_btn">Histórico de Corridas</string>
    <string name="configura_es_text">Configurações</string>
    <string name="alarme_de_gua_text">Lembrete de Água</string>
    <string name="todo">TODO</string>
    <string name="salvar_text">Salvar</string>
    <string name="at_text">até</string>
    <string name="beber_gua_a_cada_text">Beber água a cada</string>
    <string name="doispontos_text">:</string>
    <string name="hor_rio_para_alerta_text">Horário para alerta</string>
    <string name="exerc_cio_text">Exercício</string>
    <string name="repeti_es_text">Repetições:</string>
    <string name="s_ries_text">Séries:</string>
    <string name="descanso_text">Descanso:</string>
    <string name="iniciar_btn">INICIAR!</string>
    <string name="parar_btn">PARAR</string>
    <string name="anterior_text">Anterior</string>
    <string name="pr_ximo_text">Próximo</string>
    <string name="tempo_de_execu_o_text">Tempo de execução:</string>
    <string name="traco">-</string>
    <string name="mais">+</string>
    <string name="in_cio_autom_tico_btn">Início Automático</string>
    <string name="barra">/</string>
    <string name="obs_text">Obs:</string>
    <string name="exerc_ciodoispontos_text">Exercício:</string>
    <string name="obs_text2">Obs</string>
    <string name="confirmar_text">Confirmar</string>
    <string name="cancelar_text">Cancelar</string>
    <string name="grupo_muscular_text">Grupo muscular:</string>
    <string name="rep_text">Rep</string>
    <string name="series_drop_text">Series Drop</string>
    <string name="dois_text">2</string>
    <string name="segundos_text">segundos</string>
    <string name="nome_text">Nome:</string>
    <string name="novo_exerc_cio_text">Novo Exercício</string>
    <string name="novo_aer_bico_text">Novo Aeróbico</string>
    <string name="aer_bico_text">Aeróbico</string>
    <string name="obs_text3">Obs:</string>
    <string name="dura_o_text">Duração:</string>
    <string name="finalizar_corrida_text">Finalizar Corrida</string>
    <string name="contar_dist_ncia_text">Contar distância</string>
    <string name="a_precis_o_do_gps_pode_diminuir_de_acordo_com_o_sinal_text">*A precisão do GPS pode diminuir de acordo com o sinal</string>
    <string name="inicio_autom_tico_de_exerc_cios_text">Inicio Automático de Exercícios</string>
    <string name="masculina_text">Masculina</string>
    <string name="feminina_text">Feminina</string>
    <string name="voz_text">Voz</string>
    <string name="uso_do_bot_o_do_fone_text">Uso do botão do fone</string>
    <string name="sons_de_treino_text">Sons de Treino</string>
    <string name="padr_o_text">Padrão</string>
    <string name="bambam_text">Bambam</string>
    <string name="dispositivos_encontrados_txt">Dispositivos encontrados</string>
    <string name="km">KM</string>
    <string name="medir_por_dist_ncia_txt">Medir por distância</string>
    <string name="apagar_historico_txt">Apagar Historico</string>
    <string name="novo_treino_txt">Novo Treino</string>
    <string name="copiar_treino_txt">Copiar Treino</string>
    <string name="pesquisar_dispositivos_txt">Pesquisar Dispositivos</string>
    <string name="dispositivos_pareados_txt">Dispositivos pareados</string>
    <string name="o_bluetooth_est_ativado_aguardando_um_treino_ser_enviado_txt">O Bluetooth está ativado aguardando um treino ser enviado</string>
    <string name="salvar_treino_txt">Salvar Treino</string>
    <string name="name_txt">Name</string>
    <string name="caminhar_correr_txt">Caminhar/Correr</string>
    <string name="voc_ainda_n_o_tem_nenhum_treino_txt">Você ainda não tem nenhum treino</string>
    <string name="finalizar_treino_txt">Finalizar Treino</string>
    <string name="ltima_vez_txt">Última vez:</string>
    <string name="trespontos">…</string>
    <string name="tutorial">Tutorial</string>
    <string name="como_criar_um_exerc_cio">Como criar um exercício</string>
    <string name="como_criar_um_aer_bico">Como criar um aeróbico</string>
    <string name="como_fazer_um_treino_com_o_appersonal_trainer">Como treinar com APPersonal Trainer</string>
    <string name="tempo_m_dio_de_treino_txt">Tempo médio de treino</string>
    <string name="resultado_do_dia">Resultado do dia:</string>
    <string name="alarme_de_treino">Lembrete de Treino</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="t">T</string>
    <string name="q">Q</string>
    <string name="x">X</string>
    <string name="ok">OK</string>
    <string name="alarmes">Configurar lembretes</string>
    <string name="alarme_de_refei_es">Lembrete de Refeições</string>
    <string name="pronto">Pronto!</string>
    <string name="qual_a_refei_o">Qual é a refeição?</string>
    <string name="mes">Mês</string>
    <string name="Anterior"><![CDATA[<<]]></string>
    <string name="Proximo"><![CDATA[>>]]></string>
    <string name="data">Data</string>
    <string name="fechar">Fechar</string>
    <string name="escaneie_o_qr_code_com_o_celular_que_deseja_compartilhar">Escaneie o QR Code com o celular que deseja compartilhar</string>
    <string name="tentar_por_bluetooh">Tentar por bluetooh</string>
    <string name="bluetooth">Bluetooth</string>
</resources>