<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_aerobico"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    tools:context="appersonal.development.com.appersonaltrainer.Activities.AerobicoActivity"
    android:background="@drawable/bg2">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:text="@string/descanso_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="158dp"
        android:id="@+id/txtDesca"
        android:textSize="@dimen/texto_campos"
        android:textColor="@color/color_texto" />

    <TextView
        android:text="@string/aer_bico_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAerobico"
        android:layout_below="@id/adView"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/titulo"
        android:textAlignment="center"
        android:textColor="@color/color_texto" />

    <TextView
        android:id="@+id/txtObs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtAerobico"
        android:text="@string/obs_text3"
        android:textColor="@color/color_texto"
        android:visibility="invisible" />

    <TextView
        android:text="@string/s_ries_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSer"
        android:textSize="@dimen/texto_campos"
        android:layout_marginTop="30dp"
        android:textColor="@color/color_texto"
        android:layout_below="@+id/txtDur"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/dura_o_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/txtDur"
        android:textSize="@dimen/texto_campos"
        android:textColor="@color/color_texto"
        android:layout_below="@+id/txtAerobico"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDuracao"
        android:textSize="@dimen/titulo"
        android:textColor="@color/color_texto"
        android:layout_alignBaseline="@+id/txtDur"
        android:layout_alignBottom="@+id/txtDur"
        android:layout_toEndOf="@+id/txtDur"
        android:layout_marginStart="23dp" />

    <TextView
        android:id="@+id/txtSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtSer"
        android:layout_alignBottom="@+id/txtSer"
        android:layout_alignStart="@+id/txtDuracao"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/texto_campos" />

    <ToggleButton
        android:id="@+id/btnIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/swtInicioAut"
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textColor="@color/color_texto"
        android:textOff="@string/iniciar_btn"
        android:textOn="@string/parar_btn"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnIniciar"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/finalizar_corrida_text"
        android:textColor="@color/color_texto"
        android:visibility="invisible"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5" />

    <LinearLayout
        android:id="@+id/layoutBotoes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnIniciar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/anterior_text"
            android:textColor="@color/color_texto"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnProximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/pr_ximo_text"
            android:textColor="@color/color_texto"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDescanso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtDesca"
        android:layout_alignBottom="@+id/txtDesca"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/txtDesca"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/texto_campos" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTemporizador"
        android:textSize="80sp"
        android:textColor="@color/color_confirm_text"
        android:textAlignment="center"
        android:layout_below="@+id/txtSeries"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" />

    <Switch
        android:text="@string/in_cio_autom_tico_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swtInicioAut"
        android:textSize="@dimen/texto_campos"
        android:textColor="@color/color_texto"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/txtDescanso"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/barra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTemporizador"
        android:layout_toEndOf="@+id/txtSeries"
        android:id="@+id/txtBarra"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/texto_campos"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTemporizador"
        android:layout_toEndOf="@+id/txtBarra"
        android:id="@+id/txtSeriesTotal"
        android:textSize="@dimen/texto_campos"
        android:textColor="@color/color_texto" />

    <Switch
        android:id="@+id/swtContarKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/swtInicioAut"
        android:layout_alignBottom="@+id/swtInicioAut"
        android:layout_alignEnd="@+id/adView"
        android:layout_alignParentStart="true"
        android:text="@string/contar_dist_ncia_text"
        android:textAlignment="center"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/texto_campos"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtAviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtDescanso"
        android:text="@string/a_precis_o_do_gps_pode_diminuir_de_acordo_com_o_sinal_text"
        android:textColor="@color/color_texto"
        android:textSize="8sp"
        android:visibility="invisible"
        tools:ignore="SmallSp" />

</RelativeLayout>
