<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginBottom="150dp"
    android:layout_marginEnd="40dp"
    android:layout_marginStart="40dp"
    android:layout_marginTop="100dp"
    android:background="@drawable/bg5"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resultado_do_dia"
        android:textAlignment="center"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/texto_campos" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView13"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/txtAgua"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="bottom"
            android:text="@string/x"
            android:textAlignment="center"
            android:textColor="@color/color_texto"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/btnShow"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/todo"
            ads:srcCompat="@drawable/agua"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:text="@string/ok"
        android:textColor="@color/color_texto" />


</RelativeLayout>